[gd_scene load_steps=6 format=3 uid="uid://dsvob0f0elmrq"]

[ext_resource type="Script" path="res://Scripts/Gimmicks/FBZMonkeyBars.gd" id="1_120gi"]
[ext_resource type="AudioStream" uid="uid://bfba871gfmv0s" path="res://Audio/SFX/Player/Grab.wav" id="2_nspd5"]
[ext_resource type="AudioStream" uid="uid://o4sr077jns0" path="res://Audio/SFX/Gimmicks/CableLift.wav" id="3_uj08p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3hd8"]
size = Vector2(16, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_n36fw"]
radius = 5.0

[node name="MonkeyBar" type="Node2D"]
script = ExtResource("1_120gi")
lift_speed = 180
allowDepartBrachiateWhileMoving = null
allowReceiveBrachiateWhileMoved = null

[node name="CollisionObjects" type="Node2D" parent="."]
position = Vector2(0, 49)

[node name="MonkeyBarHanger" type="Area2D" parent="CollisionObjects"]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionObjects/MonkeyBarHanger"]
shape = SubResource("RectangleShape2D_v3hd8")

[node name="LeftLinker" type="Area2D" parent="CollisionObjects"]
position = Vector2(-25, -5)
collision_layer = 0
collision_mask = 4096

[node name="LeftLinkerShape" type="CollisionShape2D" parent="CollisionObjects/LeftLinker"]
shape = SubResource("CircleShape2D_n36fw")

[node name="RightLinker" type="Area2D" parent="CollisionObjects"]
position = Vector2(25, -5)
collision_layer = 0
collision_mask = 4096

[node name="RightLinkerShape" type="CollisionShape2D" parent="CollisionObjects/RightLinker"]
shape = SubResource("CircleShape2D_n36fw")

[node name="GrabStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_nspd5")
bus = &"SFX"

[node name="CableStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_uj08p")

[connection signal="body_entered" from="CollisionObjects/LeftLinker" to="." method="_on_left_linker_body_entered"]
[connection signal="body_exited" from="CollisionObjects/LeftLinker" to="." method="_on_left_linker_body_exited"]
[connection signal="body_entered" from="CollisionObjects/RightLinker" to="." method="_on_right_linker_body_entered"]
[connection signal="body_exited" from="CollisionObjects/RightLinker" to="." method="_on_right_linker_body_exited"]
